# ml_predictor

./: CMakeLists.txt  README.md  install.sh  run.sh
models/: download_imagenet_labels.py  download_resnet18.py
modules/feature_store/: batch_vector.cpp  batch_vector.h  feature_store.cpp  feature_store.h
modules/preprocessor/: data_preprocessor.cpp  data_preprocessor.h
modules/target_manager/: model_wrapper.cpp  model_wrapper.h  prediction_system.cpp  prediction_system.h  target_manager.cpp  target_manager.h
src/: data_processor_test.cpp  feature_store_test.cpp  model_wrapper_test.cpp  prediction_system_test.cpp  target_manager_test.cpp
test_data/: cpp_results.pt  expected_transform.npy  generate_sklearn_scaler.py  mean.npy  preprocessed_image.npy  scale.npy  test_torchvison_transformer.py
